fix: restore old spacing because the class remained the same

--- a/resources/sass/components/status.scss
+++ b/resources/sass/components/status.scss
@@ -83,7 +83,7 @@
         margin-bottom: 0;
 
         .list-inline-item:not(:last-child) {
-            margin-right: 0.25rem;
+            margin-right: 0.5rem;
         }
     }
 
